# autonomous-fleet

./: .coveragerc  .gitignore  .shellcheckrc  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements.txt  skills-lock.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS
adapters/: autonomous-fleet-adapter-TEMPLATE.SKILL.md
core/: autonomous-fleet-core.SKILL.md
docs/: DECISIONS.md  README.md  adopt-container-use.md  adversarial-audit-2026-06-20.md  adversarial-review-fresh.md  advreview-tests-review.md  arch-build-progress.md  arch-build-readiness.md  arch-build-review-rest.md  arch-build-review.md  autonomous-fleet-review.md  cleanup-readiness.md  close-gaps-decisions.md  close-gaps-progress.md  close-gaps-readiness.md  competitor-audit-2026-06-22.md  composition-e2e-audit.md  composition-e2e-campaign.yaml  composition-e2e-goals.md  composition-e2e-reasoning.md  doc-sync-audit.md  doc-sync-progress.md  doc-sync-readiness.md  first-substrate-progress.md  first-substrate-readiness.md  fleet-program-progress.md  gap-analysis-genesis-prompts.md  gstack-missions-research.md  handoff-adversarial-bench.md  handoff-first-substrate-run.md  handoff-gemoji-headless-run.md  handoff-to-product.md  inference-cost-readiness.md  instruction-budget.json  mutation-gate-readiness.md  orchestration-decisions.md  orchestration-landscape.md  research-community-skills.md  research-notes.md  research-runtime-loops-and-goals.md  (+8 more)
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
scripts/: _build_example_fixture.py  analyze_cost.py  analyze_seat.py  bench-adversarial.sh  bootstrap.sh  coupling-graph.py  (+41 more)
(+449 files in other folders)
