[project]
name = "autonomous-fleet"
version = "0.2.0"
description = "Multi-agent engineering framework — skills, validators, and campaign drivers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "pytest>=8.0",
  "coverage>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/_build_example_fixture.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true